--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^1.2.1",
     "crypto": "^1.0.1",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "next": "^12.3.4",
     "next-themes": "^0.2.1",
